Set up google maps api

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
     <base href="/">
+
+    <!-- Google Maps API -->
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
     <!--[if lt IE 7]>
