Initiate google maps API integration with dummy marker

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -16,7 +16,9 @@
     <base href="/">
 
     <!-- Google Maps API -->
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6UByJ6-tHdGlCHFa-jmQ0AcxWUFB53Fs&libraries=geometry">
+    </script>
   </head>
   <body>
     <!--[if lt IE 7]>
