Infowindow for points on google map

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <meta name="description" content="NexusFuel">
+    <meta name="description" content="FuelAgent">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
@@ -38,7 +38,7 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="/">NexusFuel</a>
+            <a class="navbar-brand" href="/">FuelAgent</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -59,7 +59,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the NexusFuel team</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the FuelAgent team</p>
       </div>
     </div>
 
