--- a/client/app/index.html
+++ b/client/app/index.html
@@ -37,8 +37,9 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-
-            <a class="navbar-brand" href="/">FuelAgent</a>
+            <a class="navbar-brand" href="/">
+              <img src="images/FA-logo-trbg.jpg" style="width: 100%; height: 100%;" alt="FuelAgent">
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
