--- a/client/app/index.html
+++ b/client/app/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="FuelAgent">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angularjs-slider/dist/rzslider.css" />
