--- a/client/app/index.html
+++ b/client/app/index.html
@@ -41,7 +41,7 @@
               <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-              <img src="images/FA-logo-trbg.jpg" style="width: 100%; height: 100%;" alt="FuelAgent">
+              <img src="images/FA-trbg.png" style="height: 100%;" alt="FuelAgent">
             </a>
           </div>
 
@@ -63,7 +63,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the FuelAgent team</p>
+        <p align="center"><span class="glyphicon glyphicon-heart"></span> from the FuelAgent team</p>
       </div>
     </div>
 
