--- a/client/app/index.html
+++ b/client/app/index.html
@@ -18,7 +18,7 @@
 
     <!-- Google Maps API -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6UByJ6-tHdGlCHFa-jmQ0AcxWUFB53Fs&libraries=geometry">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6UByJ6-tHdGlCHFa-jmQ0AcxWUFB53Fs&libraries=geometry&sensor=true">
     </script>
   </head>
   <body>
