--- a/client/app/index.html
+++ b/client/app/index.html
@@ -31,7 +31,7 @@
     <!-- Add your site or application content here -->
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
-        <div class="container">
+        <!-- <div class="container"> -->
           <div class="navbar-header">
 
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
@@ -53,13 +53,11 @@
               <li><a href="/">Contact</a></li>
             </ul>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </div>
 
-    <div class="container">
-      <div ui-view></div>
-    </div>
+    <div ui-view></div>
 
     <div class="footer">
       <div class="container">
