--- a/client/app/index.html
+++ b/client/app/index.html
@@ -36,7 +36,7 @@
             <img src="images/FA-trbg.png" style="height: 100%;" alt="FuelAgent">
           </a>
         </div>
-        <div class="collapse navbar-collapse">
+        <!-- <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active">
               <a href="/about">About Us</a>
@@ -45,7 +45,7 @@
               <a href="/">Contact</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
 
