--- a/client/app/index.html
+++ b/client/app/index.html
@@ -29,24 +29,11 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header" style="height:25px;">
-      <div class="navbar" role="navigation">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">
-            <img src="images/FA-trbg.png" style="height: 100%;" alt="FuelAgent">
-          </a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active">
-              <a href="/about">About Us</a>
-            </li>
-            <li class="active">
-              <a href="/">Contact</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+    <div class="header" style="height:50px;">
+      <br>
+      <a href="/">
+      <img src="images/FA-trbg.png" style="height: 100%; display:block; margin-left:auto; margin-right:auto;" alt="FuelAgent">
+      </a>
     </div>
 
 
